# testing

./: .gitignore  CMakeLists.txt  README.md  bowling_tests.cpp  catch.cpp  test.cpp  tests.cpp
.github/workflows/: bowling.yml  main.yml
bowling/: .clang-format  Bowling.hpp  BowlingAlley.cpp  BowlingAlley.hpp  BowlingTests.cpp  Bowls.hpp  CMakeLists.txt  Files.cpp  Files.hpp  Frame.cpp  Frame.hpp  Game.cpp  Game.hpp  Interpreter.cpp  Interpreter.hpp  PlayerData.cpp  PlayerData.hpp  Printer.cpp  Printer.hpp  README.md  bowling.cpp  bowling.ut.cpp  bowlingTest.cpp  bowling_test.cpp  bowling_tests.cpp  bowling_tests_gt.cpp  catch_Main.cpp  main.cpp  project.puml  result.txt  testBowling.cpp  testFiles.cpp  testInterpreter.cpp  testPrinter.cpp  test_bowling.cpp  test_bowling.hpp  tests.cpp  tests.ut.cpp
bowling/.github/workflows/: main.yml
bowling/docs/: ProjectPlan.md  plant_uml
bowling/inc/: argumentParser.hpp  bowlingGame.hpp  bowlingGameStub.hpp  directoryHandler.hpp  example.hpp  fileHandler.hpp  freeFunctions.hpp  lane.hpp  singleGame.hpp
bowling/include/: BowlingLane.hpp  DataParser.hpp  DirectoryHandler.hpp  Game.hpp  Player.hpp
bowling/input/: lane3.txt
bowling/src/: BowlingLane.cpp  DataParser.cpp  DirectoryHandler.cpp  Game.cpp  Player.cpp  Score.cpp  Score.hpp  argumentParser.cpp  bowlingGame.cpp  directoryHandler.cpp  example.cpp  fileHandler.cpp  freeFunctions.cpp  lane.cpp  main.cpp  singleGame.cpp
bowling/tests/: BowlingLane.ut.cpp  CMakeLists.txt  DataParser.ut.cpp  DirectoryHandler.ut.cpp  Game.ut.cpp  Player.ut.cpp  ScoreTests.cpp  argumentParser.ut.cpp  bowlingGame.ut.cpp  bowling_alley_tests_gt.cpp  bowling_tests_gt.cpp  directoryHandler.ut.cpp  example-ut.cpp  fileHandler.ut.cpp  franek.txt  game.ut.cpp  lane.ut.cpp  resultTest.txt  singleGame.ut.cpp  test_main.cpp  wholeAppTesting.ut.cpp
bowling/tests/results/: resultEmptyFile.txt  resultOneFile.txt
bowling/tests/testDirectory/: testFileWithSeveralEmptyLinesInRow.txt
bowling/tests/testDirectory/goodInput/: lane1.txt  lane2.txt  lane3.txt
module1/: 00_catch.en.md  01_homework.en.md  01_homework.pl.md  Bowling.hpp  index.en.html  index.html  index.pl.html  presentation_catch.md  presentation_homework.md
module2/: 00_gtest.en.md  01_homework.en.md  index.en.html  index.html  index.pl.html  presentation_gtest.md
module3/: 00_dependency_injection.en.md  00_dependency_injection.pl.md  01_test_doubles.en.md  02_gmock.en.md  02_gmock.pl.md  02_test_doubles.md  03_gmock.md  03_homework.en.md  04_homework.md  index.en.html  index.html  index.pl.html
module4/: 01_tdd.md  02_fan_controller.md  index.html
sortTest/: CMakeLists.txt
sortingTest/: CMakeLists.txt  test.cpp  test_gt.cpp
